Manifest2-pod-mygif-ver2.yaml
apiVersion : v1
kind: Pod
metadata:
  name: gifpod
  labels:
    name: myGifLabel
    env: prod
    app: main
    tier: frontend
    owner: OlegFilatov
spec:
  containers:

  - name: container-gif
    image: fillswim/mygifservice:latest
    resources:
      limits:
        memory: "1024Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080

  - name: container-tomcat
    image: tomcat:8.5.38
    resources:
      limits:
        memory: "1024Mi"
        cpu: "500m"
    ports:
      - containerPort: 8081
