Manifest06-deployment-mygif-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:                                     ### Описание деплоймента
  name: my-gif-deployment                     # Название деплоймента
  labels:                                     # Лейбл деплоймента
    app: my-k8s-deployment
spec:                                         ### Спецификация
  replicas: 3                                 # Количество реплик пода
  selector:
    matchLabels:                              # С какими лейблами подов будет работать деплоймент
      app: mygif-app
      project: mygif-project
  template:                                   ### Описание подов
    metadata:                                 ## Описание пода № 1
      labels:                                 # Лейблы подов Должны совпадать с selector
        app: mygif-app                        #! Сервис будет искать поды с этими лейблы, чтобы на них распределять трафик
        project: mygif-project
    spec:
      containers:                             # Какие контейнеры будут запускаться в подах
      - name: mygif-container
        image: fillswim/mygifservice:latest   # Можно менять версии (Являетс япеременной в Helm Chart)
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080                 #!! Порт на поде

---
apiVersion: v1                                ### Описание Сервиса
kind: Service
metadata:
  name: mygif-service                         # Имя сервиса
  labels:                                     # Лейблы сервиса
    env: prod
    owner: OlegFilatov
spec:
  type: LoadBalancer                          # Тип сервиса
  selector:
    app: mygif-app                            #! На поды с какми лейблами будет работать сервис, распространять трафик
    project: mygif-project
  ports:
  - port: 8080                                # Какой на Load Balancer будет открыть порт
    targetPort: 8080                          #!! Порт на поде
