Manifest08-deployment-mygif-service-multycontainer-autoscalling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mygif-app-autoscalling          # Название деплоймента (будет использоваться в автоселлере)
  labels:
    app: my-k8s-deployment
spec:                                   # Спецификация
  selector:                             # С какими подами будет работать деплоймент должны совпадать с (template/metadata/labels)
    matchLabels:
      app: mygif-app
      project: mygif-project
  template:
    metadata:                           # Описание пода
      labels:                           # Должны совпадать с selector / Сервис будет искать эти лейблы
        app: mygif-app                  # Эти поды будут выбираться для сервиса
        project: mygif-project
    spec:
      containers:                       # Какие контейнеры будут запускаться в подах
      - name: mygif-container           # Контейнер № 1
        image: fillswim/mygifservice:latest
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: mygif-service
  labels:
    env: prod
    owner: OlegFilatov
spec:
  type: LoadBalancer
  selector:
    app: mygif-app                        # Выбираются из деплоймента
    project: mygif-project
  ports:
  - port: 8080                            # port on Load Balancer
    targetPort: 8080                      # port on pod
