Manifest9-ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:

  - host: www.fill1.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mygif-deployment1 # Название сервиса, на который будет отправляться запрос
            port: 
              number: 8080

  - host: www.fill2.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mygif-deployment2 # Название сервиса, на который будет отправляться запрос
            port: 
              number: 8080
              
  - host: www.fill3.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mygif-deployment3 # Название сервиса, на который будет отправляться запрос
            port: 
              number: 8080
